add readme, typos

--- a/config.yaml
+++ b/config.yaml
@@ -58,7 +58,7 @@ params:
   reward: no
   sidebar_about_description: 'MOF, Department of Geography, UMR'
   sidebar_avatar: 'img/DJI_0118.JPG'
-  slogan: 'Documentation of databaase, data, surveys and analysis at Marburg Open Forest'
+  slogan: 'Documentation of database, data, surveys and analysis at Marburg Open Forest'
   social:
     email: youremail@gmail.com
     github: https://github.com/marburgopenforest
